overflow:scroll, a bug below android 3

--- a/test.css
+++ b/test.css
@@ -1,7 +1,7 @@
 #header {
     height: 50px;
     background: red;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     z-index: 3;
 }
@@ -9,8 +9,8 @@
 #footer {
     height: 50px;
     background: blue;
-    bottom: 0px;
-    position: fixed;
+    /* bottom: 0px; */
+    /* position: fixed; */
     width: 100%;
     z-index: 3;
 }
@@ -20,9 +20,11 @@ html, body { padding: 0; margin: 0; }
 #page {
     z-index: 2;
     width: 100%;
+    background: white;
     overflow-x: hidden;
+    /* overflow-y: scroll; */
     position: relative;
-    top: 50px;
+/* top: 50px; */
 /* height: 300px; */
 /* overflow: scroll; */
 }
@@ -33,6 +35,11 @@ html, body { padding: 0; margin: 0; }
     width: 200px;
     height: 600px;
 /* z-index: 100; */
+}
+
+#content {
+    overflow: auto;
+    /* overflow-y: scroll; */
 }
 
 .menu-open {
